crates/ditto-checker/tests/golden/type-errors/unknown_constructor_typo.ditto
module Test exports (..)


type Five = Five

suggest = Fide
